--- a/src/main/resources/users/user.html
+++ b/src/main/resources/users/user.html
@@ -4,23 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Management</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<h1>User Management System</h1>
 
-<h2>Create User</h2>
-<form action="/createUser">
-  <label for="name">User's name: </label><br>
-  <input type="text" id="name" name="name"><br><br>
-  <label for="lastName">User's lastname: </label><br>
-  <input type="text" id="lastName" name="lastName"><br><br>
-  <label for="age">User's age: </label><br>
-  <input type="text" id="age" name="age"><br><br>
-  <input type="button" value="Submit" onclick="loadPostMsg()">
-</form>
+<div class="container">
 
-<h2>List of Users</h2>
-<ul id="userList"></ul>
+  <div>
+    <div>
+      <h1>User Management System</h1>
+    </div>
+
+    <h2>Create User</h2>
+    <form action="/users">
+      <label for="name">User's name: </label><br>
+      <input type="text" id="name" name="name"><br><br>
+      <label for="lastName">User's lastname: </label><br>
+      <input type="text" id="lastName" name="lastName"><br><br>
+      <label for="age">User's age: </label><br>
+      <input type="text" id="age" name="age"><br><br>
+      <input type="button" value="Submit" onclick="loadPostMsg()">
+    </form>
+    <h3>List of users</h3>
+    <ul id="userList"></ul>
+  </div>
+
+  <div>
+    <h2>Search a user</h2>
+    <form action="/users/">
+      <label for="name">Write the user´s name: </label><br>
+      <input type="text" id="nameToSearch" name="name"><br><br>
+      <input type="button" value="Submit" onclick="loadGetOneMsg()">
+    </form>
+    <div class="image-container">
+      <img src="png/user.png" alt="Imagen">
+    </div>
+    <h3>User's information</h3>
+    <ul id="userInfo"></ul>
+  </div>
+
+
+</div>
+
+
 
 <script src="js/user.js"></script>
 </body>
